# rust-server-monitoring

./: .env.example  .gitignore  Cargo.toml  Dockerfile  GITHUB_SECRETS.md  README.md  build.sh  deploy.sh  docker-compose.yml  logrotate.conf  server-setup.sh
.github/workflows/: ci-cd.yml
src/: config.rs  docker_monitor.rs  email_notifier.rs  main.rs  server_monitor.rs
