[package]
name = "performance-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lettre = "0.11"
sysinfo = "0.29"
bollard = "0.16"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"